test/parse/expr/bad-simd-shuffle-lane-index-overflow.txt
;;; TOOL: wat2wasm
;;; ARGS: --enable-simd
;;; ERROR: 1
(module
  (func
    v128.const i32 0xff00ff01 0xff00ff0f 0xff00ffff 0xff00ff7f
    v128.const i32 0x00550055 0x00550055 0x00550055 0x00550155
    v8x16.shuffle 16 100 56 3 77 5 22 7 24 9 26 11 28 13 30 15
    ))

(;; STDERR ;;;
out/test/parse/expr/bad-simd-shuffle-lane-index-overflow.txt:8:5: error: lane index must be in range `[0, 32)` (got `100`)
    v8x16.shuffle 16 100 56 3 77 5 22 7 24 9 26 11 28 13 30 15
    ^^^^^^^^^^^^^
out/test/parse/expr/bad-simd-shuffle-lane-index-overflow.txt:8:5: error: lane index must be in range `[0, 32)` (got `56`)
    v8x16.shuffle 16 100 56 3 77 5 22 7 24 9 26 11 28 13 30 15
    ^^^^^^^^^^^^^
out/test/parse/expr/bad-simd-shuffle-lane-index-overflow.txt:8:5: error: lane index must be in range `[0, 32)` (got `77`)
    v8x16.shuffle 16 100 56 3 77 5 22 7 24 9 26 11 28 13 30 15
    ^^^^^^^^^^^^^
out/test/parse/expr/bad-simd-shuffle-lane-index-overflow.txt:8:5: error: type mismatch in function, expected [] but got [v128]
    v8x16.shuffle 16 100 56 3 77 5 22 7 24 9 26 11 28 13 30 15
    ^^^^^^^^^^^^^
;;; STDERR ;;)
